--- a/style.css
+++ b/style.css
@@ -1174,7 +1174,7 @@ hr:last-child, .hr:last-child { margin-bottom: 0; }
 
 .team-circle { margin-bottom: 50px; }
 .team-circle .team-photo { position: relative; width: 160px; margin: 0 auto; }
-.team-circle .team-photo img { border-radius: 50%; width: 160px; position: relative; z-index: 2; }
+.team-circle .team-photo img { border-radius: 50%; width: 160px; position: relative; z-index: 2;filter:grayscale(100%); }
 .team-circle .team-photo .expand-trigger { cursor: pointer; position: absolute; top: -12px; left: -12px; height: calc(100% + 24px); width: calc(100% + 24px); z-index: 3; border-radius: 50%; color: #fff; }
 .team-circle .team-photo:before { position: absolute; content: ""; height: calc(100% + 24px); width: calc(100% + 24px); border-radius: 50%; top: -12px; left: 50%; transform: translateX(-50%) scale(0.6); z-index: 1; opacity: 0; transition: all .5s ease; background-image: linear-gradient(to top, #2b56f5 0%, #46bdf4 100%); }
 .team-circle .team-photo:hover .expand-trigger { opacity: 1; }
