--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ a:hover, a:focus, a:active { outline: 0; color: #8255fd; }
 .section-bg { background: #10122d; }
 .theme-light .section-bg { background: #eff6ff; }
 
-.section-bg-alt { background: #0b0c22; }
+.section-bg-alt { background: #1d205a; }
 .theme-light .section-bg-alt { background: #fff; }
 
 .section-bg-blend { background-image: linear-gradient(to bottom, #0e122f 0%, #0b0c22 70%); }
@@ -838,7 +838,7 @@ hr:last-child, .hr:last-child { margin-bottom: 0; }
 .banner { min-height: 720px; }
 .banner.banner-full { min-height: 100vh; }
 .banner.banner-curb { background: url(assets/images/header-bottom.png) bottom center no-repeat, #0b0c22; background-size: 100%; }
-.banner.banner-curb.banner-particle { background: url(assets/images/header-bottom.png) bottom center no-repeat, url(assets/images/particle-left.png) top left no-repeat, url(assets/images/particle-right.png) top right no-repeat, #0b0c22; background-size: 100%, auto, auto, auto; }
+.banner.banner-curb.banner-particle { background: url(assets/images/header-bottom.png) bottom center no-repeat, url(assets/images/particle-left.png) top left no-repeat, url(assets/images/particle-right.png) top right no-repeat, #1d205a; background-size: 100%, auto, auto, auto; }
 
 .theme-light .banner.banner-curb { background: url(assets/images/header-bottom-light.png) bottom center no-repeat, #eff6ff; background-size: 100%; }
 .theme-light .banner.banner-curb.banner-particle { background: url(assets/images/header-bottom-light.png) bottom center no-repeat, url(assets/images/particle-left.png) top left no-repeat, url(assets/images/particle-right.png) top right no-repeat, #eff6ff; background-size: 100%, auto, auto, auto; }
@@ -991,7 +991,7 @@ hr:last-child, .hr:last-child { margin-bottom: 0; }
 @media only screen and (max-width: 991px) { .event-info { margin-bottom: 40px; } }
 .countdown-box { -ms-border-radius: 10px; border-radius: 10px; padding: 40px 20px; }
 .section-bg .countdown-box { background: #0b0c22; }
-.section-bg-alt .countdown-box { background: #10122d; }
+.section-bg-alt .countdown-box { background: #1d205a; }
 .countdown-box .token-countdown { padding-bottom: 33px; }
 .countdown-box .token-countdown .countdown-time { font-size: 45px; font-weight: 300; line-height: 1; display: block; margin-bottom: 5px; position: relative; }
 .countdown-box .token-countdown .countdown-time:after { position: absolute; right: -18px; bottom: 5px; content: ":"; color: #fff; font-size: 40px; }
