--- a/style.css
+++ b/style.css
@@ -1985,6 +1985,9 @@ div.vc_toggle.vc_toggle_arrow.vc_toggle_active h4{
 .section-connect:before{
     background: none !important;
 }
+.team-circle .team-title{
+  min-height: 51px;
+}
 @media(max-width: 991px){
   .faq_img{
     position: relative !important;
