--- a/style.css
+++ b/style.css
@@ -2011,7 +2011,7 @@ div.vc_toggle.vc_toggle_arrow.vc_toggle_active h4{
 .waubutton{
     /*display: none !important;*/
     position: absolute;
-    bottom: 0;
+    bottom: -7px;
 }
 @media(max-width: 1550px){
   .subparticle{
