--- a/style.css
+++ b/style.css
@@ -2021,6 +2021,9 @@ div.vc_toggle.vc_toggle_arrow.vc_toggle_active h4{
   position: relative;
   z-index: 9;
 }
+#roadmap{
+  background: #12132f;
+}
 @media(min-width: 1200px) {
   .contact-info li {
      margin: 0 91px;
@@ -2102,6 +2105,9 @@ div.vc_toggle.vc_toggle_arrow.vc_toggle_active h4{
   h2, h4{
     color: #d9b169;
     margin: 3% 0 11%;
+  }
+  #roadmap{
+    background: #0f102c;
   }
 }
 @media(max-width: 480px){
