--- a/dashboard/plugins/assets/css/basic-admin.css
+++ b/dashboard/plugins/assets/css/basic-admin.css
@@ -11,10 +11,10 @@
 /*Typography*/
 /*Panels*/
 /*Dropdown*/
-//*Pagination*//
-//*Pager*//
-//*Labels*//
-//*Badge*//
+/*Pagination*/
+/*Pager*/
+/*Labels*/
+/*Badge*/
 
 body {
 	overflow-x:hidden;
