--- a/dashboard/plugins/assets/css/style.css
+++ b/dashboard/plugins/assets/css/style.css
@@ -13,3 +13,6 @@ table.dataTable thead .sorting::after, table.dataTable thead .sorting_asc::after
     border-radius: 7px;
     width: 227px;
 }
+.co_currency{
+    margin-top: 45px;
+}
